corrected the location of the hamburger menu on mobile and ipad break points

--- a/wp-content/themes/livinglegacy/new.css
+++ b/wp-content/themes/livinglegacy/new.css
@@ -10,6 +10,10 @@ header {
   border-image-outset: 11px !important;
 }
 
+.slicknav_menu {
+  top: 55px;
+}
+
 /*          Featured Selection Page         */
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Desktop resolution~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 .feature-selection-header {
